cambiando el hover en formación y proyectos

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en udemy, entre otros, que siempre me sirven para profundizar en tecnología y complementar las formaciones.</p>
                 <div class="proyectos">
                     <!-- Profesorado de matemática -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://isfd45-bue.infd.edu.ar/sitio/" target="_blank">
                             <img src="img/education/profesorado.png"
                                 alt="imagen de la portada de inicio del I.S.F.D. N° 45" class="img">
@@ -322,7 +322,7 @@
                         </div>
                     </article>
                     <!-- Desarrollador Front-end React -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://www.coderhouse.com/certificados/61c37d0347aaf1005d0eb0d9" target="_blank">
                             <img src="img/education/certificado-front-end.png"
                                 alt="imagen del certificado de mi carrera de Desarrollador Front-end React" class="img">
@@ -333,7 +333,7 @@
                         </div>
                     </article>
                     <!-- Programa ONE -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://app.aluracursos.com/user/nahuel-developer1/program/certificate" target="_blank">
                             <img src="img/education/programa-ONE.png"
                                 alt="imagen del nombre del programa ONE con su slogan" class="img">
@@ -344,7 +344,7 @@
                         </div>
                     </article>
                     <!-- Programa Codo a Codo Full Stack Node.js -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://www.buenosaires.gob.ar/educacion/codo-codo" target="_blank">
                             <img src="img/education/codoacodo.png"
                                 alt="imagen del logo de Codo a Codo, programa de formación de TI" class="img">
@@ -355,7 +355,7 @@
                         </div>
                     </article>
                     <!-- Diplomatura en Ciencia de Datos e Inteligencia Artificial -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://argentinaprograma.unsam.edu.ar/paginas/plan.html" target="_blank">
                             <img src="img/education/logo-unsam.jpg"
                                 alt="imagen del logo de la universidad UNSAM" class="img">
@@ -366,7 +366,7 @@
                         </div>
                     </article>
                     <!-- Ingeniería en sistemas UTEL -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://utel.edu.mx/argentina" target="_blank">
                             <img src="img/education/Utel_logo.png"
                                 alt="imagen del logo de la universidad UTEL" class="img">
@@ -387,7 +387,7 @@
             <div class="container">
                 <div class="proyectos" class="mt-4">
                     <!-- Sitio web, creado como desafío y proyecto para el curso de desarrollo web de Coderhouse -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
                             <img src="./img/projects/imagen-proyecto-coderhouse.jpg"
                                 alt="imagen de una chica morena con rulos, y con una laptop, sonriendo" class="img">
@@ -406,7 +406,7 @@
                         </div>
                     </article>
                     <!-- Sitio web, creado en equipo como trabajo Freelance para un emprendimiento de marketing digital -->
-                    <article id="proyectoCoderhouse" class="proyecto trans">
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/proyecto-web-coder/" target="_blank">
                             <img src="./img/projects/portada-freelance-marketing.png"
                                 alt="imagen de un grupo de 4 personas trabajando y viendo una laptop Mac" class="img">
@@ -425,7 +425,7 @@
                         </div>
                     </article>
                     <!-- Página web con HMTL5, CSS3 y JavaScript, como challenge para el programa de Codo a Codo -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
                             <img src="./img/projects/portada-conferencia.png" alt="imagen de la portada de la página de conferencia Bs As." class="img">
                         </a>
@@ -443,7 +443,7 @@
                         </div>
                     </article>
                     <!-- Portafolio hecho casi en su totalidad con bootstrap, para practicar este framework -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
                             <img src="./img/projects/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
                         </a>
@@ -461,7 +461,7 @@
                         </div>
                     </article>
                     <!-- Encriptador de texto, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
                             <img src="./img/projects/encriptador-img.png" alt="imagen de la aplicación del encriptador"
                             class="img">
@@ -480,7 +480,7 @@
                         </div>
                     </article>
                     <!-- Juego del Blackjack, proyecto para practicar JavaScript, usando vite, importaciones de módulos y buenas prácticas -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://game-blackjack-vite.netlify.app/" target="_blank">
                             <img src="./img/projects/portada-blackjack.png" alt="imagen de la aplicación del juego del Blackjack" class="img">
                         </a>
@@ -498,7 +498,7 @@
                         </div>
                     </article>
                     <!-- CRM de clientes, usando IndexedDB como base de datos -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/crm-clientes/" target="_blank">
                             <img src="./img/projects/portada-crm-clientes.png" alt="imagen de la app del CRM de clientes" class="img">
                         </a>
@@ -516,7 +516,7 @@
                         </div>
                     </article>
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/administrador-de-pacientes/" target="_blank"><img src="img/projects/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
@@ -532,7 +532,7 @@
                         </div>
                     </article>
                     <!-- Ecommerce desarrollado con React, como desafío y proyecto del curso de React de Coderhouse -->
-                    <article class="proyecto trans">
+                    <article class="proyecto proyecto-hover">
                         <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
                             <img src="./img/projects/portada-ecommerce-react.jpg" alt="imagen de una chica rubia y joven comiendo una barra de chocolate" class="img">
                         </a>
