estilos al enlace contratar terminado

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a id="menu" class="nav-link m-2" href="#trabajos">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a id="menu" class="nav-link m-2 border rounded" href="#contact">Contratar</a>
+                            <a id="menu" class="nav-link m-2 border-start rounded-3 ps-1" href="#contact">Contratar</a>
                         </li>
                     </ul>
                 </div>
