mejorando los estilos en el footer

--- a/index.html
+++ b/index.html
@@ -647,11 +647,9 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid m-0 p-0">
+        <div class="container-fluid m-0 pb-1 pt-2">
             <a href="#" class="logoFooter">Portafolio</a>
-        </div>
-        <div class="container">
-            <h4 class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con ❤️ por Nahuel-DevOne</h4>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con ❤️ por Nahuel-DevOne<p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
