--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="foto text-center mb-2">
                         <img src="./img/FotoPerfil.png" class="rounded-circle mb-3 imgFotoPerfil" alt="imagen de mi foto de perfil">
                         <p class="nombre">Nahuel Lopez</p>
-                        <p class="nombre">Full Stack Developer</p>
+                        <p class="nombre">Python Data Analyst & Full Stack Developer</p>
                     </div>
                 </div>
             </div>
@@ -378,6 +378,17 @@
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
+                    <!-- Bootcamp Python Data Analyst NNT Data -->
+                    <!-- <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
+                        <a href="https://www.etdfundacionnttdata.com/" target="_blank">
+                            <img src="img/education/Utel_logo.png"
+                                alt="imagen del logo de NTT Data" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Python Data Analyst</p>
+                            <p class="fs-4 mt-3 lead">En curso</p>
+                        </div>
+                    </article> -->
                 </div>
             </div>
         </section>
