agregando proyecto Todo App y sacando Bootstrap Portfolio

--- a/index.html
+++ b/index.html
@@ -455,24 +455,6 @@
                             </a>
                         </div>
                     </article>
-                    <!-- Portafolio hecho casi en su totalidad con bootstrap, para practicar este framework -->
-                    <article class="proyecto proyecto-hover">
-                        <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
-                            <img src="./img/projects/portafolio.png" alt="imagen de un portafolio de trabajos" class="img">
-                        </a>
-                        <div class="info">
-                            <p class="fs-4 m-0">Portafolio</p>
-                            <p class="fs-4 mt-3 lead">Bootstrap 5</p>
-                        </div>
-                        <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/bootstrap-portafolio/" target="_blank">
-                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
-                            </a>
-                            <a href="https://github.com/Nahuel-DevOne/bootstrap-portafolio" target="_blank">
-                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
-                            </a>
-                        </div>
-                    </article>
                     <!-- Encriptador de texto, proyecto que forma parte de los challenges del programa ONE, de Oracle + Alura LATAM -->
                     <article class="proyecto proyecto-hover">
                         <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
@@ -481,13 +463,31 @@
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Encriptador</p>
-                            <p class="fs-4 mt-3 lead">JavaScript</p>
+                            <p class="fs-4 mt-3 lead">JavaScript - Regex</p>
                         </div>
                         <div class="d-flex">
                             <a href="https://nahuel-devone.github.io/encriptador/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
                             <a href="https://github.com/Nahuel-DevOne/encriptador" target="_blank">
+                                <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
+                            </a>
+                        </div>
+                    </article>
+                    <!-- Todo App hecho con JavaScript y Vite -->
+                    <article class="proyecto proyecto-hover">
+                        <a href="https://todo-app-devone.netlify.app/" target="_blank">
+                            <img src="./img/projects/img-todo-app.png" alt="imagen del Todo App" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Todo App</p>
+                            <p class="fs-4 mt-3 lead">JavaScript - Vite</p>
+                        </div>
+                        <div class="d-flex">
+                            <a href="https://todo-app-devone.netlify.app/" target="_blank">
+                                <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
+                            </a>
+                            <a href="https://github.com/Nahuel-DevOne/todo-app-vite" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
