actualizando el portfolio

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Desarrollador Full Stack</h1>
-                        <p class="presentacionInfoPrincipal lead">Full Stack JavaScript con stack MERN, Python, profesor de matemática y tutor de JavaScript.
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Analista de Datos & Desarrollador Full Stack</h1>
+                        <p class="presentacionInfoPrincipal lead">Full Stack JavaScript con stack MERN, Python Data Analyst, profesor de matemática y tutor de JavaScript.
                         Me encuentro reforzando mi stack con proyectos, mientras aprendo otras tecnologías para el análisis de datos y el machine learning. 
                         Busco trabajar en equipos donde pueda aplicar mis conocimientos, hacer un plan de carrera y seguir creciendo a nivel profesional.</p>
                         <div class="cajaIconosPresentacion">
@@ -144,58 +144,70 @@
                 <div class="cajaSkills mb-5">
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/icons8-figma.svg" class="iconoSkill" alt="logo de Figma">
+                        <img src="img/skills/technical-skills/figma.svg" class="iconoSkill" alt="logo de Figma">
                         <p class="nombreIcono lead">Figma</p>
                     </div>    
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/icons8-trello.svg" class="iconoSkill" alt="logo de Trello">
+                        <img src="img/skills/technical-skills/trello.svg" class="iconoSkill" alt="logo de Trello">
                         <p class="nombreIcono lead">Trello</p>
+                    </div>
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/vscode.svg" class="iconoSkill" alt="logo de Visual Studio Code">
+                        <p class="nombreIcono lead">Visual Studio Code</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/jupyter.svg" class="iconoSkill" alt="logo de Jupyter">
+                        <p class="nombreIcono lead">Jupyter</p>
+                    </div>    
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/anaconda.svg" class="iconoSkill" alt="logo de Anaconda">
+                        <p class="nombreIcono lead">Anaconda</p>
                     </div>    
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/markdown-original.svg" class="iconoSkill" alt="logo de Trello">
+                        <img src="img/skills/technical-skills/markdown.svg" class="iconoSkill" alt="logo de Markdown">
                         <p class="nombreIcono lead">Markdown</p>
                     </div>    
                     <div class="m-2">
                         <!-- <i class="iconoSkill git fa-brands fa-git-alt"></i> -->
-                        <img src="img/skills/technical-skills/git-original.svg" class="iconoSkill" alt="logo de Git">
+                        <img src="img/skills/technical-skills/git.svg" class="iconoSkill" alt="logo de Git">
                         <p class="nombreIcono lead">Git</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/github-original.svg" class="iconoSkill" alt="logo de GitHub">
+                        <img src="img/skills/technical-skills/github.svg" class="iconoSkill" alt="logo de GitHub">
                         <p class="nombreIcono lead">GitHub</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/html5-original-wordmark.svg" class="iconoSkill" alt="logo de HTML5">
+                        <img src="img/skills/technical-skills/html5.svg" class="iconoSkill" alt="logo de HTML5">
                         <p class="nombreIcono lead">HTML5</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/css3-original-wordmark.svg" class="iconoSkill" alt="logo de CSS3">
+                        <img src="img/skills/technical-skills/css3.svg" class="iconoSkill" alt="logo de CSS3">
                         <p class="nombreIcono lead">CSS3</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/icons8-bootstrap.png" class="iconoSkill" alt="logo de Bootstrap">
+                        <img src="img/skills/technical-skills/bootstrap.png" class="iconoSkill" alt="logo de Bootstrap">
                         <p class="nombreIcono lead">Bootstrap</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/tailwindcss-plain.svg" class="iconoSkill" alt="logo de Tailwind">
+                        <img src="img/skills/technical-skills/tailwindcss.svg" class="iconoSkill" alt="logo de Tailwindcss">
                         <p class="nombreIcono lead">Tailwind</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/sass-original.svg" class="iconoSkill" alt="logo de SASS">
+                        <img src="img/skills/technical-skills/sass.svg" class="iconoSkill" alt="logo de SASS">
                         <p class="nombreIcono lead">SASS</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/javascript-original.svg" class="iconoSkill" alt="logo de JavaScript">
+                        <img src="img/skills/technical-skills/javascript.svg" class="iconoSkill" alt="logo de JavaScript">
                         <p class="nombreIcono lead">JavaScript</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/typescript-original.svg" class="iconoSkill" alt="logo de TypeScript">
+                        <img src="img/skills/technical-skills/typescript.svg" class="iconoSkill" alt="logo de TypeScript">
                         <p class="nombreIcono lead">TypeScript</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/react-original.svg" class="iconoSkill" alt="logo de React">
+                        <img src="img/skills/technical-skills/react.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
                     </div>    
                     <div class="m-2">
@@ -203,37 +215,33 @@
                         <p class="nombreIcono lead">Firebase</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/icons8-nodejs.svg" class="iconoSkill" alt="logo de Node.js">
+                        <img src="img/skills/technical-skills/nodejs.svg" class="iconoSkill" alt="logo de Node.js">
                         <p class="nombreIcono lead">Node.js</p>
-                    </div>    
+                    </div>
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/express-original.svg" class="iconoSkill" alt="logo de Express">
-                        <p class="nombreIcono lead">Express</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/npm-original-wordmark.svg" class="iconoSkill" alt="logo de npm">
+                        <img src="img/skills/technical-skills/npm.svg" class="iconoSkill" alt="logo de npm">
                         <p class="nombreIcono lead">npm</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/python-original.svg" class="iconoSkill" alt="logo de npm">
+                        <img src="img/skills/technical-skills/express.svg" class="iconoSkill" alt="logo de Express">
+                        <p class="nombreIcono lead">Express</p>
+                    </div>        
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
                         <p class="nombreIcono lead">Python</p>
-                    </div>    
+                    </div>        
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/icons8-anaconda.svg" class="iconoSkill" alt="logo de npm">
-                        <p class="nombreIcono lead">Anaconda</p>
-                    </div>    
-                    <div class="m-2">
-                        <img src="img/skills/technical-skills/icons8-mongodb.png" class="iconoSkill" alt="logo de MongoDB">
+                        <img src="img/skills/technical-skills/mongodb.png" class="iconoSkill" alt="logo de MongoDB">
                         <p class="nombreIcono lead">MongoDB</p>
                     </div>    
                     <div class="m-2">
-                        <img src="img/skills/technical-skills/mysql-original-wordmark.svg" class="iconoSkill" alt="logo de MySQL">
+                        <img src="img/skills/technical-skills/mysql.svg" class="iconoSkill" alt="logo de MySQL">
                         <p class="nombreIcono lead">MySQL</p>
                     </div>    
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/postgresql-original.svg" class="iconoSkill" alt="logo de PostgreSQL">
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/postgresql.svg" class="iconoSkill" alt="logo de PostgreSQL">
                         <p class="nombreIcono lead">PostgreSQL</p>
-                    </div>     -->
+                    </div>    
                 </div>    
                 <h3 class="subtitulo">Soft skills:</h3>
                 <div class="cajaSkills mb-5">
